# sound-sensor

./: .gitignore  README.md  audit.md  mock_ws.py  starting.md
.claude/: settings.local.json
blink-test/: Cargo.toml  blink-test.uf2  build.rs  memory.x
blink-test/.cargo/: config.toml
blink-test/src/: main.rs
firmware-rs/: Cargo.toml  build.rs  guardian-latest.uf2  guardian-working-latest.uf2  guardian.uf2  memory.x  mk-uf2.sh
firmware-rs/.cargo/: config.toml
firmware-rs/src/: ap_services.rs  audio.rs  dev_log.rs  ducking.rs  flash_config.rs  flash_fs.rs  http.rs  main.rs  net.rs  ota.rs  pwa_assets.rs  setup_html.rs  tv.rs  ws.rs
guardian-test/: Cargo.toml
guardian-test/src/: audio.rs  crypto.rs  ducking.rs  flash_layout.rs  lib.rs  ota.rs  parsers.rs  tv_brand.rs  ws_frame.rs
guardian-test/tests/: test_audio.rs  test_crypto.rs  test_ducking.rs  test_flash_layout.rs  test_ota.rs  test_parsers.rs  test_tv_brand.rs  test_ws_frame.rs
phase0_micropython/: test_i2s.py
pwa-wasm/: Cargo.toml  Trunk.toml  index.html  manifest.json  sw.js
pwa-wasm/src/: calibration.rs  dev.rs  info.rs  main.rs  meter.rs  setup.rs  tv.rs  wifi.rs  ws.rs
