[package]
name = "blink-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blink-test"
path = "src/main.rs"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time     = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp       = { version = "0.9", features = ["rp235xa", "time-driver", "critical-section-impl"] }
cyw43            = { version = "0.6", features = ["defmt", "firmware-logs"] }
cyw43-pio        = { version = "0.9", features = ["defmt"] }
cortex-m         = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt      = "0.7"
defmt            = "1.0"
defmt-rtt        = "1.0"
panic-probe      = { version = "1.0", features = ["print-defmt"] }
static_cell      = "2"
portable-atomic  = { version = "1", features = ["critical-section"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
