[package]
name    = "guardian-pwa"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos — fine-grained reactive UI
leptos = { version = "0.7", features = ["csr"] }

# WebSocket + async
gloo-net    = { version = "0.6", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures     = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Storage", "console",
    "WebSocket", "MessageEvent", "CloseEvent",
    "Navigator", "ServiceWorkerContainer",
] }
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"

# Serde for parsing WS messages
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

# Logging
log                      = "0.4"
console_log              = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
